--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "mern shopping app",
   "main": "server.js",
   "scripts": {
-    "start":"node backend/server"
+    "start":"node backend/server",
+    "server": "nodemon backend/server",
+    "client":"npm start --prefix frontend"
   },
   "repository": {
     "type": "git",
