--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "mern shopping app",
   "main": "server.js",
   "scripts": {
-    "start":"node backend/server",
+    "start": "node backend/server",
     "server": "nodemon backend/server",
-    "client":"npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/rohitpandit0311/proShop#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
 }
